# draupnir

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: board.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_04_30_baseline.py  2026_05_01_0001_add_projects.py  2026_05_01_0002_add_files_and_jobs.py  2026_05_02_0003_add_job_events.py  2026_05_05_0004_add_extraction_profiles.py  2026_05_05_0005_add_ingest_output_primitives.py  2026_05_10_0006_add_project_default_constraints.py  2026_05_10_0006_add_soft_delete_columns.py  2026_05_10_0006_constrain_job_fields_and_ingest_profile.py  2026_05_10_0007_constrain_job_fields_and_ingest_profile.py  2026_05_10_0008_add_soft_delete_columns.py  2026_05_10_0009_add_idempotency_keys.py  2026_05_11_0010_add_job_attempt_leases.py  2026_05_11_0010_replace_lineage_fk_cascades_with_restrict.py  2026_05_11_0011_add_job_attempt_leases.py  2026_05_11_0012_add_jobs_base_revision_id.py  2026_05_11_0013_add_jobs_enqueue_outbox.py  2026_05_12_0014_enforce_append_only_lineage_tables.py  2026_05_13_0015_add_revision_scoped_entity_materialization.py  2026_05_14_0016_add_revision_scoped_job_contract.py  2026_05_15_0017_add_quantity_takeoff_persistence.py  2026_05_15_0018_align_quantity_constraints.py  2026_05_16_0019_add_estimation_catalog_schema.py  2026_05_17_0020_add_estimate_versions.py  2026_05_18_0021_add_estimate_snapshot_items.py  2026_05_18_0022_add_estimate_job_input_contract.py  2026_05_18_0023_repair_quantity_gate_contract.py  2026_05_27_0024_add_export_job_input_contract.py  2026_05_31_0025_allow_changeset_origin_drawing_revisions.py  2026_05_31_0026_add_generated_artifact_lineage_fks.py  2026_06_01_0027_add_changeset_persistence.py  2026_06_03_0028_add_changeset_apply_job_input.py  2026_06_04_0029_add_revised_dxf_export_kind.py  2026_06_07_0030_add_extraction_profile_pdf_input_mode.py  2026_06_08_0031_set_projects_timestamps_not_null.py  2026_06_08_0032_add_max_attempts_exceeded_job_error_code.py  2026_06_14_0033_add_base_dxf_export_kind.py  2026_06_16_0034_ungate_estimate_creation.py  2026_06_17_0035_ungate_export_job_inputs.py  2026_06_17_0036_nullable_confidence_gate_columns.py  (+9 more)
app/: __init__.py  main.py
app/api/: __init__.py  idempotency.py  pagination.py
app/cad/: __init__.py  changeset_validation.py  changesets.py
app/core/: __init__.py  clock.py  config.py  errors.py  exceptions.py  logging.py  middleware.py
app/db/: __init__.py  base.py  mixins.py  session.py
app/estimating/: __init__.py  decimal_text.py  money.py
app/exports/: __init__.py  _base.py  csv.py  estimate_pdf.py  revised_dxf.py  revision_json.py
app/ingestion/: __init__.py  block_expansion.py  centerline_contract.py  centerline_dwg.py  centerline_passthrough.py  centerline_pdf.py  contracts.py  debug_overlay.py  entity_geometry.py  finalization.py  loader.py  ref_resolution.py  registry.py  runner.py  selection.py  sheet_membership.py  source.py  source_fragment.py  units_inference.py  validation.py
app/interpretation/: __init__.py  annotation_zones.py  cable_circuits.py  cable_estimate.py  cable_estimate_assembly.py  cable_estimate_params.py  cable_home_run.py  cable_home_run_loaders.py  cable_topology.py  cable_topology_loaders.py  containment_legend.py  containment_takeoff.py  device_identity.py  devices.py  explicit_rooms.py  floor_counted.py  floor_counted_loaders.py  floor_estimated.py  floor_estimated_loaders.py  floor_measured.py  floor_measured_loaders.py  floor_registration.py  floor_registration_loaders.py  floor_takeoff_loaders.py  geometry.py  grid_registration.py  grid_registration_loaders.py  ifc_rooms.py  label_rooms.py  layer_roles.py  legend.py  loaders.py  (+27 more)
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  HANDOFF.md  MVP.md  TRD.md  changesets.md  integration-lane-profiling.md  local-dwg-pdf-extraction-comparison-checklist.md  local-dwg-pdf-review-workflow.md  phase-r-gate-results.md
mcp_server/: README.md  SKILL.md  __init__.py  __main__.py  config.py  health.py  instructions.py  server.py  verification.py
scripts/: dev_stack.sh  pre_push_check.py  profile_integration_lane.py
services/pdf-intake/: Containerfile  README.md  pyproject.toml
services/pdf-intake/app/: main.py
tests/: __init__.py  conftest.py  ingestion_contract_harness.py  jobs_test_helpers.py  test_741c_slim_canonical_guard.py  test_adapter_contract_harness.py  test_api_pagination.py  test_append_only_lineage_tables.py  test_block_expansion.py  test_centerline_contract.py  test_centerline_enqueue.py  test_centerline_import_boundary.py  test_centerline_pdf.py  test_centerline_pdf_oracle.py  test_changeset_api.py  test_changeset_apply.py  test_changeset_persistence.py  test_changeset_to_dxf_smoke.py  test_changeset_validation.py  test_config.py  test_csv_exports.py  test_db.py  test_db_mixins.py  test_debug_overlay.py  test_devices_api.py  test_dxf_writer.py  test_entity_geometry.py  test_entity_provenance.py  test_errors.py  test_estimate_engine_contracts.py  test_estimate_engine_persistence_payloads.py  test_estimate_engine_service.py  test_estimate_execution_input.py  test_estimate_job_input_contract.py  test_estimate_pdf_export.py  test_estimate_read_api.py  test_estimate_scalar_money_inputs.py  test_estimate_snapshot_item_persistence.py  test_estimate_version_persistence.py  test_estimation_catalog_api.py  (+143 more)
(+205 files in other folders)
